--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/cytoscape-fcose": "^2.2.4",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@atproto/api": "^0.16.9",
+		"cytoscape": "^3.33.1",
+		"cytoscape-fcose": "^2.2.0"
 	}
 }
